# diddir

./: Cargo.toml  README.md
src/: config.rs  did.rs  diddir.rs  lib.rs
src/diddir/: unix.rs
src/dir/: wasm.rs  windows.rs
tests/: config.rs  diddir.rs  dir.rs  doc.rs
tests/data/: default  stacy.jones@no.email
