[package]
name = "diddir"
version = "0.1.0"
authors = ["David Huseby"]
edition = "2018"
description = "Library for interfacing DIDDir keyrings."
repository = "https://github.com/dhuseby/diddir"
documentation = "https://github.com/dhuseby/diddir/blob/master/README.md"
readme = "README.md"
keywords = ["diddir"]
license = "Apache-2.0"

[dependencies]
base64 = "0.10.1"
cfg-if = "0.1.6"
directories = "1.0.2"
log = "0.4.6"
rand = "0.6.5"
tempfile = "3.0.5"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }
